# SimulationCUDA

./: CMakeLists.txt  CudaProject.vcxproj  CudaProject.vcxproj.filters  README.md  main.cu  parameters.cu  parameters.h  setup.py  simulation_wrapper.cpp
CudaProject/x64/Debug/: CudaProject.exe.recipe  kernel.cu.cache  main.cu.cache  parameters.cu.cache  parameters.cu1514247633.deps
CudaProject/x64/Debug/CudaProject.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CudaProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/: CudaProject.exe.recipe  CudaProject.exp  CudaProject.lib  CudaProject.vcxproj.FileListAbsolute.txt  main.cu-7181814.deps  main.cu.cache  parameters.cu.cache  vc143.idb
x64/Debug/CudaProject.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CudaProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Release/: main.cu.cache  parameters.cu.cache
x64/Release/CudaProject.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CudaProject.lastbuildstate
